...
              decoration: BoxDecoration(
                color: AppColors.primaryColor,
                borderRadius: BorderRadius.circular(16),
              ),
              width: double.infinity,
              child: TextButton(
                key: const Key('HomeCypherButton'),
                onPressed: () {
                  controller.goToCypherScreen();
                },
                child: Text(
                  'Cypher',
                  style: TextStyle(
...
